--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     $(document).ready(() => {
       $('select').material_select()
       $('.datepicker').pickadate({ selectMonths: true, selectYears: 3 })
+      $('.collapsible').collapsible({ accordion : false })
     })
     </script>
   </body>
